--- a/Frontend/src/app/books/book-store/book-store.component.html
+++ b/Frontend/src/app/books/book-store/book-store.component.html
@@ -52,7 +52,12 @@
       <ng-container matColumnDef="order">
         <th mat-header-cell *matHeaderCellDef>Order</th>
         <td mat-cell *matCellDef="let element">
-          <button mat-raised-button color="accent" [disabled]="element.order">
+          <button
+            mat-raised-button
+            color="accent"
+            [disabled]="element.ordered"
+            (click)="OrderBook(element)"
+          >
             Order
           </button>
         </td>
