--- a/Frontend/src/app/shared/components/page-header/page-header.component.html
+++ b/Frontend/src/app/shared/components/page-header/page-header.component.html
@@ -4,7 +4,12 @@
   <div class="user-info">
     @if(loggedIn){
     <div class="name">Hi, {{ name }}</div>
-    <button mat-raised-button filled-container-color="red" class="profile">
+    <button
+      mat-raised-button
+      filled-container-color="red"
+      class="profile"
+      routerLink="/profile"
+    >
       Profile
     </button>
     <button mat-raised-button class="logout" (click)="logout()">Log Out</button>
