--- a/Frontend/src/app/books/book-store/book-store.component.html
+++ b/Frontend/src/app/books/book-store/book-store.component.html
@@ -18,7 +18,7 @@
     <mat-expansion-panel-header>
       <mat-panel-title>{{ book.category | titlecase }}</mat-panel-title>
       <mat-panel-description>{{
-        book.subCategory | titlecase
+        book.subCategory! | titlecase
       }}</mat-panel-description>
     </mat-expansion-panel-header>
     <table mat-table [dataSource]="book.books">
