--- a/Frontend/src/app/shared/components/page-table/page-table.component.html
+++ b/Frontend/src/app/shared/components/page-table/page-table.component.html
@@ -1,1 +1,46 @@
-<p>page-table works!</p>
+<table mat-table [dataSource]="dataSource">
+  <ng-container matColumnDef="userId">
+    <th mat-header-cell *matHeaderCellDef>User Id</th>
+    <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="userName">
+    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.firstName }} {{ element.lastName }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="email">
+    <th mat-header-cell *matHeaderCellDef>Email</th>
+    <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="userType">
+    <th mat-header-cell *matHeaderCellDef>Type</th>
+    <td mat-cell *matCellDef="let element">{{ element.userType }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="createdOn">
+    <th mat-header-cell *matHeaderCellDef>Created On</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.createdOn | date : "dd-MMM-YYYY" }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="approve">
+    <th mat-header-cell *matHeaderCellDef>Approve</th>
+    <td mat-cell *matCellDef="let element">
+      <button
+        mat-raised-button
+        color="accent"
+        (click)="this.approve.emit(element)"
+      >
+        Approve
+      </button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columns"></tr>
+  <tr mat-row *matRowDef="let row; columns: columns"></tr>
+</table>
