--- a/Frontend/src/app/shared/components/page-table/page-table.component.html
+++ b/Frontend/src/app/shared/components/page-table/page-table.component.html
@@ -41,6 +41,62 @@
     </td>
   </ng-container>
 
+  <ng-container matColumnDef="orderId">
+    <th mat-header-cell *matHeaderCellDef>Order Id</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.id }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="userIdForOrder">
+    <th mat-header-cell *matHeaderCellDef>User Id</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.userId }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="userNameForOrder">
+    <th mat-header-cell *matHeaderCellDef>User Name</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.userName }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="bookId">
+    <th mat-header-cell *matHeaderCellDef>Book Id</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.bookId }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="orderDate">
+    <th mat-header-cell *matHeaderCellDef>Order Date</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.orderDate | date : "dd-MMM-YYYY" }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="fineToPay">
+    <th mat-header-cell *matHeaderCellDef>Fine To Pay</th>
+    <td mat-cell *matCellDef="let element">
+      {{ getFineToPay(element) }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="returnedDate">
+    <th mat-header-cell *matHeaderCellDef>Returned Date</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.returnDate | date : "dd-MMM-YYYY" }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="finePaid">
+    <th mat-header-cell *matHeaderCellDef>Fine Paid</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.finePaid }}
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="columns"></tr>
   <tr mat-row *matRowDef="let row; columns: columns"></tr>
 </table>
