--- a/Frontend/src/app/shared/components/page-table/page-table.component.html
+++ b/Frontend/src/app/shared/components/page-table/page-table.component.html
@@ -97,6 +97,33 @@
     </td>
   </ng-container>
 
+  <ng-container matColumnDef="mobileNumber">
+    <th mat-header-cell *matHeaderCellDef>Mobile No.</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.mobileNumber }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="accountStatus">
+    <th mat-header-cell *matHeaderCellDef>Status</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.accountStatusString }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="unBlock">
+    <th mat-header-cell *matHeaderCellDef>Unblock</th>
+    <td mat-cell *matCellDef="let element">
+      <button
+        mat-raised-button
+        [disabled]="element.accountStatusString != 'BLOCKED'"
+        (click)="this.unBlock.emit(element)"
+      >
+        Unblock
+      </button>
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="columns"></tr>
   <tr mat-row *matRowDef="let row; columns: columns"></tr>
 </table>
